# searcher-rs

./: .envrc  .gitignore  .prettierrc  README.md  devenv.nix  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/info/: $types.d.ts
.svelte-kit/types/src/routes/info/[slug]/: $types.d.ts  proxy+page.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  constants.rs  event.rs  main.rs  searcher.rs  tray.rs  window.rs
src/lib/: FieldRow.svelte  List.svelte  ListItem.svelte  Search.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/info-test/: +page.svelte
src/routes/info/[slug]/: +page.svelte  +page.ts
src/services/: commands.ts  config.ts  notifications.ts  searcher.ts
testing/: data.xlsx  settings.yaml  ~$data.xlsx
