[package]
name = "searcher-rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
directories = "4.0.1"
anyhow = "1.0.65"
auto-launch = "0.4.0"
tokio = "1"
tauri = { version = "1.4", features = ["api-all", "macos-private-api", "system-tray"] }
strum = "0.24"
strum_macros = "0.24"
fuzzy-matcher = "*"
calamine = "0.19.1"
# tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
